<resources>
    <string name="app_name">ImportMAG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_loggin">Iniciar Sesion</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_logout">Cerrar Sesion</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_todoProductos">Todos los productos</string>
    <string name="menu_favs">Favoritos</string>
    <string name="menu_detProductos">Detalles del Producto</string>
    <string name="menu_categorias">Categorías</string>

    <string name="tituloeditlistfav">Renombrar lista de favoritos</string>
    <string name="tituloBiscarProd">Buscar Producto</string>
    <string name="nomlistadefavs">Nombre de la lista de favoritos:</string>

    <string name="crearListFav">Crear lista de favoritos</string>


    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_name"></string>
    <string name="sinnombre"></string>
    <string name="infRegistro">Solo se permiten caracteres alfabéticos (letras) y el punto (.),
        seguidos de un espacio.</string>
    <string name="strnombre">Nombre</string>
    <string name="infRegFech">(Ejemplo: 31/05/1970)</string>
    <string name="strApellido">Apellidos</string>
    <string name="strmail">Correo electrónico</string>
    <string name="strpass">Contraseña</string>
    <string name="strconfirmpass">Confirme contraseña</string>
    <string name="strfecha">Fecha de nacimiento</string>
    <string name="stredad">Edad</string>
    <string name="strolvidarcontraseña">¿Ha olvidado su contraseña?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>