<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.import_mag.importmag.Fragments.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.import_mag.importmag.Fragments.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_todos_productos"
        android:name="com.import_mag.importmag.Fragments.TodosProductosFragment"
        android:label="@string/menu_todoProductos"
        tools:layout="@layout/fragment_todosproductos" />
</navigation>