<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.VentanaNuevaListaActivity">
    <TextView
        android:id="@+id/txt_email"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/crearListFav"
        android:fontFamily="@font/istok_web"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTelefono1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/istok_web"
        android:textSize="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/nomlistadefavs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/edtxtCrearListFav"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/forma_campotexto"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtTelefono1"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono1" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/reacoff"
        android:contentDescription="@string/sinnombre"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:scaleType="fitCenter"
        android:text="  Cancelar  "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtCrearListFav" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtCrearListFav" />

    <Button
        android:id="@+id/btnCrearListNew"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/azulclaroimport"
        android:contentDescription="@string/sinnombre"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:scaleType="fitCenter"
        android:text="  CREAR  "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/edtxtCrearListFav" />

</androidx.constraintlayout.widget.ConstraintLayout>