<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/emailLogText"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/login_name"
                    android:ems="10"
                    android:hint="@string/strmail"
                    android:inputType="textEmailAddress"
                    android:paddingStart="55dp"
                    android:paddingEnd="10dp"
                    android:text="andrewsacm1pt@gmail.com"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/enlaceRegistro"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/sinnombre"
                    android:fontFamily="sans-serif-black"
                    android:scaleType="fitCenter"
                    android:text="¿No tiene una cuenta? Cree una aquí "
                    android:textColor="@color/azulclaroimport"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/olvidarContraseñaView" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnIniciarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/azulclaroimport"
                    android:scaleType="fitCenter"
                    android:text="Iniciar Sesión"
                    app:iconTint="@color/white"
                    app:icon="@drawable/ic_login"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enlaceRegistro"
                    app:srcCompat="@drawable/btn_ingresar" />

                <EditText
                    android:id="@+id/passwordLogText"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_password"
                    android:ems="10"
                    android:hint="@string/strpass"
                    android:inputType="textPassword"
                    android:paddingStart="60dp"
                    android:paddingEnd="50dp"
                    android:text="123456789"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLogText" />

                <ImageView
                    android:id="@+id/salirInicioSesion"
                    android:layout_width="38dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_cerrar" />

                <TextView
                    android:id="@+id/olvidarContraseñaView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-black"
                    android:text="Olvido su contraseña?"
                    android:textColor="@color/azulclaroimport"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLogText" />

                <CheckBox
                    android:id="@+id/checkViewPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:buttonTint="#404547"
                    android:shadowColor="#373737"
                    android:textColor="#3C3C3C"
                    app:layout_constraintBottom_toBottomOf="@+id/passwordLogText"
                    app:layout_constraintEnd_toEndOf="@+id/passwordLogText"
                    app:layout_constraintTop_toTopOf="@+id/passwordLogText" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="132dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintEnd_toEndOf="@+id/emailLogText"
                    app:layout_constraintStart_toStartOf="@+id/emailLogText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/log2sinfondo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>